# Computer-Graphics-Learning

games101/作业/0/: CMakeLists.txt  main.cc
games101/作业/1/: Triangle.cc  main.cc  rasterizer.cc  rasterizer.h
games101/作业/2/: CMakeLists.txt  Triangle.cc  main.cc  rasterizer.cc  rasterizer.h
games101/作业/3/: CMakeLists.txt  OBJ_Loader.h  Shader.h  Texture.h  Triangle.cc  Triangle.h  main.cc  rasterizer.cc  rasterizer.h
games101/作业/4/: CMakeLists.txt  main.cc
games101/作业/5/: CMakeLists.txt  Light.h  Object.h  Renderer.cc  Renderer.h  Scene.cc  Scene.h  Sphere.h  Triangle.h  main.cc
games101/作业/6/: BVH.cc  BVH.h  Bounds3.h  Intersection.h  Material.h  Object.h  Renderer.cc  Scene.cc  Scene.h  Sphere.h  Triangle.h  main.cc
games101/作业/7/: AreaLight.h  BVH.cc  BVH.h  Bounds3.h  CMakeLists.txt  Intersection.h  Light.h  Material.h  Object.h  Renderer.cc  Renderer.h  Scene.cc  Scene.h  Sphere.h  Triangle.h  main.cc
games101/作业/8/src/: CMakeLists.txt
opengl/: .gitignore
opengl/1 创建窗口/: CMakeLists.txt
opengl/1 创建窗口/src/: main.cc
opengl/2 创建三角形/: CMakeLists.txt
opengl/2 创建三角形/src/: main.cc
opengl/3 着色器/: CMakeLists.txt
opengl/3 着色器/include/glad/: glad.h
opengl/3 着色器/src/: main.cc
opengl/4 纹理/: CMakeLists.txt
opengl/4 纹理/include/: stb_image.h
opengl/4 纹理/include/learnopengl/: shader_s.h
opengl/4 纹理/src/: glad.c  main.cc
